Documenting, cleaning LanguagePack